updating sql file
